--- a/trunk/docs/obi.css
+++ b/trunk/docs/obi.css
@@ -1,4 +1,4 @@
-body { background-color: white; color: black; text-align: justify; margin:
+body { background-color: white; color: black; text-align: left; margin:
   2em; }
 h1 { text-align: center; font-family: sans-serif; }
 h2, h3, h4 { font-family: sans-serif; color: #3c3; }
@@ -6,3 +6,4 @@ div#top { margin: -2em -2em 2em -2em; padding: .1em 2em;
   background-color: #6f6; color: white; }
 div#toc { border: solid thin #3c3; padding: 0 1em; }
 a { font-weight: bold; color: #3c3; }
+pre { background-color: #cfc; padding: 1em; margin-left: 2em; }
