--- a/trunk/docs/obi.css
+++ b/trunk/docs/obi.css
@@ -1,9 +1,14 @@
 body { background-color: white; color: black; text-align: left; margin:
-  2em; }
+  2em; font-family: sans-serif }
+
 h1 { text-align: center; font-family: sans-serif; }
-h2, h3, h4 { font-family: sans-serif; color: #3c3; }
 div#top { margin: -2em -2em 2em -2em; padding: .1em 2em;
   background-color: #6f6; color: white; }
+
+h2, h3, h4 { font-family: sans-serif; color: rgb(5, 80, 5) }
+h2, h3 { border-bottom: thin, rgb(25, 100, 25) dotted; }
+
 div#toc { border: solid thin #3c3; padding: 0 1em; }
-a { font-weight: bold; color: #3c3; }
-pre { background-color: #cfc; padding: 1em; margin-left: 2em; }
+a { font-weight: bold }
+pre { background-color: #cfc; padding: 1em; margin-left: 2em;
+  border: solid thin #6f6; }
