--- a/docs/obi.css
+++ b/docs/obi.css
@@ -1,17 +1,19 @@
 body { background-color: white; color: black; text-align: left; margin:
-  2em; font-family: sans-serif }
+  auto; font-family: serif; width: 75% }
 
-h1 { text-align: center; font-family: sans-serif; }
-div#top { margin: -2em -2em 2em -2em; padding: .1em 2em;
+h1, h2, h3, h4 { font-family: serif; font-variant: small-caps; }
+
+h1 { text-align: center }
+div#top { margin: 2em -2em 2em -2em; padding: .1em 2em;
   background-color: #6f6; color: white; }
 
-h2, h3, h4 { font-family: sans-serif; color: rgb(5, 80, 5) }
-h2, h3 { border-bottom: thin rgb(25, 100, 25) dotted; }
+h2, h3, h4 { color: #0c0; }
+h2, h3 { border-bottom: thin #0c0 dotted; }
 
 div#toc ul { list-style-type: none; }
 
 .todo { font-weight: bold; color: red; }
 
-a { font-weight: bold }
+a { font-weight: bold; color: #048 }
 pre { background-color: #cfc; padding: 1em; margin-left: 2em;
   border: solid thin #6f6; }
